--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,9 +25,10 @@
 /* header bg*/
 .head{
     background-image: url(../images/developer.png),url(../images/header_bg.png);
-    background-size: auto;
+    background-size: 96px, auto;
     background-repeat: no-repeat;
     background-position: top left, bottom right;
+    background-color: #FFF8F3;
 }
 
 /* navigation styles */
@@ -77,4 +78,39 @@ nav ul{
 .image{
     width: 500px;
     height: 590px;
+}
+.about{
+    background-color: #FFF8F3;
+    margin: 100px 200px 100px 200px;
+    border-radius: 10px;
+    padding: 80px 100px 80px 100px;
+    text-align: center;
+}
+.section-title{
+    font-weight: bold;
+    font-size: 32px;
+    color: #181818;
+}
+.section-para{
+    color: #474747;
+    font-size: 14px;
+
+}
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.about-item{
+    align-items: center;
+}
+.name{
+    font-size: 15px;
+}
+.mary{
+    font-weight: 600;
+    font-size: 15px;
 }
