--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,9 @@
 .dark-2{
     color: #474747;
 }
+.text-center{
+    text-align: center;
+}
 
 
   /* shared styles */
@@ -83,7 +86,7 @@ nav ul{
     background-color: #FFF8F3;
     margin: 100px 200px 100px 200px;
     border-radius: 10px;
-    padding: 80px 100px 80px 100px;
+    padding: 60px 90px 60px 90px;
     text-align: center;
 }
 .section-title{
@@ -100,6 +103,10 @@ main{
     max-width: 1140px;
     margin: 0px auto;
 }
+main section{
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
 .about-items{
     display: flex;
     justify-content: space-around;
@@ -113,4 +120,13 @@ main{
 .mary{
     font-weight: 600;
     font-size: 15px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.09);
 }
